--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 /* -------------------- Página login.html -------------------- */
-.containerFormLogin{
+.containerFormLogin {
     width: 80%;
     margin: auto;
     height: 70vh;
@@ -9,17 +9,23 @@
     box-shadow: 1px 2px 21px -5px rgba(0,0,0,0.73);
 }
 
-.tituloLogin{
+.tituloLogin {
     text-align: center;
 }
 
-.formularioLogin{
+.formularioLogin {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
+/*Modais*/
+.modalErroLogin {
+    display: none;
+    position: fixed top;
+}
 /* -------------------- Página registro.html -------------------- */ 
-.containerFormCadastro{
+.containerFormCadastro {
     width: 80%;
     margin: auto;
     height: 70vh;
@@ -29,11 +35,11 @@
     box-shadow: 1px 2px 21px -5px rgba(0,0,0,0.73);
 }
 
-.tituloCadastro{
+.tituloCadastro {
     text-align: center;
 }
 
-.formularioCadastro{
+.formularioCadastro {
     display: flex;
     flex-direction: column;
     align-items: center;
