--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,6 @@
 /*--------- Home -------- */
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Chivo:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@1,300&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
+
 body{
     width: 425px;
 }
@@ -137,6 +139,8 @@ aside{
 }
 .headerCarrinho > h3{
     font-size: 16px;
+    height: 40px;
+    line-height: 40px;
 }
 .carrinhoListar{
     display: flex;
@@ -160,6 +164,8 @@ p{
     font-size: 14px;
 }
 .h2Cardapio{
+    font-family: "poppins";
+    font-weight: 500;
     padding: 5px 0px 0px 0px;
 }
 .preco{
@@ -169,7 +175,8 @@ p{
 }
 .imgCardapio{
     width: 100%;
-    height: 90%;
+    height: 100%;
+    margin: 0 auto;
 }
 .imgHeader{
     width: 50%;
