--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,19 +11,54 @@
 
 .tituloLogin {
     text-align: center;
+    padding-top: 25%;
 }
 
 .formularioLogin {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
+    height: 80%;
 }
+
+.formularioLogin>input {
+    width: 70%;
+    height: 10%;
+    background-color: #E9ECEF;
+    border: 1.5px solid #E9ECEF;
+    border-radius: 12px;
+
+    color: #868E96;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.formularioLogin>button {
+    width: 70%;
+    height: 10%;
+    background-color: #FF2253;
+    border: 1.5px solid #FF2253;
+    border-radius: 12px;
+
+    color: #F8F9FA;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+}
+
 
 /*Modais*/
 .modalErroLogin {
     display: none;
-    position: fixed top;
+    position: fixed;
 }
+
+
 /* -------------------- Página registro.html -------------------- */ 
 .containerFormCadastro {
     width: 80%;
@@ -43,4 +78,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+/*Modais*/
+.modalErroCadastro {
+    display: none;
+}
+.modalConfirmacaoCadastro {
+    display: none;
 }
