--- a/src/css/style.css
+++ b/src/css/style.css
@@ -162,6 +162,11 @@ img{
 .tituloLogin {
     text-align: center;
     padding-top: 25%;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 20px;
 }
 
 .formularioLogin {
@@ -205,16 +210,71 @@ img{
 /*Modais*/
 .modalErroLogin {
     display: none;
+    width: 90%;
+    height: 10%;
     position: fixed;
+    top: 25%;
+    left: 5%;
+    background-color: #FFFFFF;
+    border-radius: 12px;
+}
+
+.containerModalContent {
+    width: 100%;
+}
+
+.modalHeader {
+    display: flex;
+    align-items: center;
+    height: 50%;
+    justify-content: space-between;
+    background-color: #F8F9FA;
+    border-radius: 12px 12px 0px 0px;
+}
+.modalHeader>h2 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    margin-left: 15px;
+}
+.modalHeader>button {
+    background-color: #E9ECEF;
+    border-radius: 4px;
+    border: 1.5px solid #E9ECEF;
+    margin-right: 15px;
+
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #868E96;
+}
+
+.modalContent>p {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #212529;
+    margin-left: 20px;
+}
+.modalErroFooter {
+    height: 10%;
+    background-color: #FF2253;
+    border-radius: 0px 0px 12px 12px;
 }
 
 
 /* -------------------- Página registro.html -------------------- */ 
 .containerFormCadastro {
     width: 80%;
-    margin: auto;
+    margin-left: 18px;
     height: 70vh;
-    margin-top: 12vh;
+    margin-top: 8vh;
     border-radius: 8px;
     -webkit-box-shadow: 1px 2px 21px -5px rgba(0,0,0,0.73); 
     box-shadow: 1px 2px 21px -5px rgba(0,0,0,0.73);
@@ -222,20 +282,76 @@ img{
 
 .tituloCadastro {
     text-align: center;
+    padding-top: 25%;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 20px;
 }
 
 .formularioCadastro {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
+    height: 80%;
+}
+
+.formularioCadastro>input {
+    width: 70%;
+    height: 10%;
+    background-color: #E9ECEF;
+    border: 1.5px solid #E9ECEF;
+    border-radius: 12px;
+
+    color: #868E96;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.formularioCadastro>button {
+    width: 70%;
+    height: 10%;
+    background-color: #FF2253;
+    border: 1.5px solid #FF2253;
+    border-radius: 12px;
+
+    color: #F8F9FA;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
 }
 
 /*Modais*/
 .modalErroCadastro {
     display: none;
+    width: 85%;
+    height: 10%;
+    position: fixed;
+    top: 25%;
+    left: 1%;
+    background-color: #FFFFFF;
+    border-radius: 12px;
 }
 .modalConfirmacaoCadastro {
     display: none;
+    width: 85%;
+    height: 10%;
+    position: fixed;
+    top: 25%;
+    left: 1%;
+    background-color: #FFFFFF;
+    border-radius: 12px;
+}
+.modalConfirmaFooter {
+    height: 10%;
+    background-color: #39DF8F;
+    border-radius: 0px 0px 12px 12px;
 }
 
 /* -------- Media Query -------*/
