--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,8 @@
 
 body{
     width: 425px;
+    font-family: "poppins";
+    font-weight: 500;
 }
 .headerVitrine{
     display: flex;
@@ -15,7 +17,7 @@ body{
     display: flex;
     align-items: baseline;
 }
-ul{
+.vitrineCardapio-produtos{
     display: flex;
     list-style: none;
     padding: 1px;
@@ -91,7 +93,8 @@ h4{
     height: 12px;
 }
 .imgBebidas{
-    width: 15px;
+    padding: 0px 2px 0px 2px;
+    width: 10px;
     height: 15px;
 }
 .btnFiltros{
@@ -126,7 +129,7 @@ h4{
     display: flex;
     justify-content: space-between;
 }
-aside{
+.asideCarrinho{
     width: 30%;
 }
 .headerCarrinho{
@@ -158,7 +161,7 @@ aside{
     align-items: flex-start;
     margin: 5px;
 }
-p{
+.vitrineCardapio-produtos-listar > p{
     color: #868E96;
     padding: 5px 0px 5px 0px;
     font-size: 14px;
@@ -199,6 +202,37 @@ p{
     border: none;
     border-radius: 25px;
 }
+.divQuantidadeCarrinho{
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    background-color: #F8F9FA;
+}
+.divTotalCarrinho{
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+}
+.vitrineCarrinho-Listar{
+    display: flex;
+    flex-direction: column
+}
+.botaoExcluirCarrinho{
+    width: 30px;
+    height: 25px;
+}
+
+.btnLogin{
+    width: 70px;
+    height: 30px;
+    border: none;
+    border-radius: 50px;
+    background: #FF2253;
+    color: white;
+}
+
+button:hover{
+    cursor: pointer;
 
 /*-------------------- Página login.html -------------------- */
 .containerFormLogin{
@@ -509,7 +543,7 @@ p{
         width: 40%;
         display: flex;
     }
-    aside{
+    .asideCarrinho{
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -520,7 +554,11 @@ p{
         flex-direction: column;
         align-items: flex-start;
     }
+    .vitrineCarrinho-Listar{
+        display: flex;
+    }
 
+}
     @media(min-width: 769px){
         body{
             width: 100%;
@@ -535,5 +573,5 @@ p{
         .vitrineCardapio-produtos-listar{
             width: 40%;
         }
-    }
-}
+   }
+
