--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,6 +116,22 @@ h4{
     background-color: #FF2253;
     color: #FFF;
 }
+.adicionarProduto{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 180px;
+    background-color: #FF2253;
+}
+.btn-p-adicionarProduto{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    text-align: center;
+    color: #F8F9FA;
+}
+
 .mainVitrine{
     display: flex;
     padding: 20px;
@@ -230,6 +246,17 @@ h4{
     background: #FF2253;
     color: white;
 }
+
+.btnLogout{
+    width: 70px;
+    height: 30px;
+    border: none;
+    border-radius: 50px;
+    background: #FF2253;
+    color: white;
+}
+
+
 
 button:hover{
     cursor: pointer;
@@ -447,10 +474,17 @@ button:hover{
 .mainAdm{
     display: flex;
     padding: 20px;
+    margin: 0 auto;
 }
 .vitrineAdm{
     display: flex;
+    flex-direction: column;
     width: 90%;
+    margin: 0 auto;
+}
+.vitrineAdm-produtos-header{
+    display: flex;
+    flex-direction: column;
 }
 .vitrineAdm-produtos{
     display: flex;
@@ -462,6 +496,7 @@ button:hover{
     height: 62px;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     margin: 10px;
     border: 1px solid #E9ECEF;  
     box-sizing: border-box;
