--- a/src/css/style.css
+++ b/src/css/style.css
@@ -656,6 +656,10 @@ p{
     margin: 0 auto;
 }
 
+.modalEdicao{
+    display: none;
+}
+
 /* -------- Media Query -------*/
 @media(min-width: 426px){
     body{
