--- a/src/css/style.css
+++ b/src/css/style.css
@@ -695,9 +695,14 @@ button:hover{
 .divAdm-DeletarPost{
     border-radius: 8px ;
     background: #FFFFFF;
-    width: 300px;
+    width: 400px;
+    height: 200px;
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
+    position: fixed;
+    top: 52px;
+    left: 25%;
 }
 .divAdm-DeletarHeader{
     display: flex;
@@ -705,23 +710,94 @@ button:hover{
     justify-content: space-between;
     align-items: center;
     padding: 20px 28px;
-    height: 70px;
+    height: 25px;
     background: #F8F9FA;
     border-radius: 8px 8px 0px 0px;
-}
-.btn-divAdm-Deletar-Fechar{
 
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #000000;
 }
 .divAdm-DeletarCorpo{
-
-}
-.divAdm-Deletar-texto{
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 27px;
+    text-align: center;
+    color: #000000;
 }
 .divAdm-DeletarBtns{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    
+    padding: 15px 20px;
+    height: 52px;
+}
+.btn-divAdm-Deletar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 20px;
+    height: 30px;
+    width: 90px;
+    background: #F8F9FA;
+    border: 1.5px solid #F8F9FA;
+    box-sizing: border-box;
+    border-radius: 32px;
 
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #868E96;
 }
 
+.btn-divAdm-Deletar-Fechar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 20px;
+    height: 30px;
+    width: 90px;
+    background: #F8F9FA;
+    border: 1.5px solid #F8F9FA;
+    box-sizing: border-box;
+    border-radius: 32px;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #868E96;
+}
+
+.btn-divAdm-Deletar-Fechar-2{
+    background: #E9ECEF;
+    border-radius: 4px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #000000;
+    border:none;
+}
 
 /* -------- Media Query -------*/
 @media(min-width: 426px){
