--- a/src/css/style.css
+++ b/src/css/style.css
@@ -695,10 +695,299 @@ button:hover{
 
 
 
-.modalEdicao{
+.modalEdicao {
     display: none;
+    flex-direction: column;
+    position: fixed;
+    width: 30vw;
+    height: 70vh;
+    align-items: center;
+    top: 15%;
+    left: 35%;
+    background-color: #FFFFFF;
+    border-radius: 12px 12px 12px 12px;
+    -webkit-box-shadow: 1px 2px 21px -5px rgba(0,0,0,0.73); 
+    box-shadow: 1px 2px 21px -5px rgba(0,0,0,0.73);
 }
 
+.headModEdicao {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    background-color: #F8F9FA;
+    border-radius: 12px 12px 0px 0px;
+    height: 10%;
+}
+
+.headModEdicao>h3 {
+    margin-right: 50%;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    color: #000000;
+}
+
+.headModEdicao>.modalExit {
+    border: none;
+    background-color:#E9ECEF;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #868E96;
+}
+
+.modalNomeDesc {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    height: 20vh;
+    margin-left: 20%;
+    margin-top: 5%;
+}
+
+.modalNomeDesc>h3 {
+    margin-right: 50%;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #000000;
+}
+.modalNomeDesc> #inputModEditNome {
+    margin-top: 1%;
+    margin-bottom: 3%;
+    width: 77%;
+    height: 52px;
+    background-color: #F8F9FA;
+    border-radius: 12px;
+    border:1.5px solid #DEE2E6
+}
+
+.modalNomeDesc> #inputModEditDesc {
+    margin-top: 1%;
+    margin-bottom: 3%;
+    width: 77%;
+    height: 80px;
+    background-color: #F8F9FA;
+    border-radius: 12px;
+    border:1.5px solid #DEE2E6
+}
+
+.modalBtnCateg {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    height: 10%;
+    margin-left: 20%;
+    
+}
+.modalBtnCateg>h3 {
+    margin-right: 50%;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #000000;
+    margin-bottom: 2%;
+} 
+
+.btnsCateg{
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+
+}
+
+.btnsCateg > button{
+    width: 30%;
+    border: none;
+    border-radius: 12px;
+    height: 4vh;
+    color: #868E96;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.modalPrecoImg {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    height: 20vh;
+    margin-left: 20%;
+    margin-top: 5%;
+}
+
+.modalPrecoImg>h3 {
+    margin-right: 50%;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #000000;
+}
+
+.modalPrecoImg> #inputModEditValor {
+    margin-top: 1%;
+    margin-bottom: 3%;
+    width: 77%;
+    height: 52px;
+    background-color: #F8F9FA;
+    border-radius: 12px;
+    border:1.5px solid #DEE2E6
+}
+
+.modalPrecoImg> #inputModEditUrl {
+    margin-top: 1%;
+    margin-bottom: 3%;
+    width: 77%;
+    height: 52px;
+    background-color: #F8F9FA;
+    border-radius: 12px;
+    border:1.5px solid #DEE2E6
+}
+
+#btnModSaveChanges{
+    background: #FF2253;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 20px;
+    border: none;
+    box-sizing: border-box;
+    border-radius: 32px;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #F8F9FA;
+
+}
+
+.modalAdicionar {
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    width: 30vw;
+    height: 70vh;
+    align-items: center;
+    top: 15%;
+    left: 35%;
+    background-color: #FFFFFF;
+    border-radius: 12px 12px 12px 12px;
+    -webkit-box-shadow: 1px 2px 21px -5px rgba(0,0,0,0.73); 
+    box-shadow: 1px 2px 21px -5px rgba(0,0,0,0.73);
+}
+
+.headModAdicionar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    background-color: #F8F9FA;
+    border-radius: 12px 12px 0px 0px;
+    height: 10%;
+}
+
+.headModAdicionar>h3 {
+    margin-right: 50%;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    color: #000000;
+}
+
+.headModAdicionar>.modalExitAdd {
+    border: none;
+    background-color:#E9ECEF;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #868E96;
+}
+
+.modalNomeDesc> #inputModAddNome {
+    margin-top: 1%;
+    margin-bottom: 3%;
+    width: 77%;
+    height: 52px;
+    background-color: #F8F9FA;
+    border-radius: 12px;
+    border:1.5px solid #DEE2E6
+}
+
+.modalNomeDesc> #inputModAddDesc {
+    margin-top: 1%;
+    margin-bottom: 3%;
+    width: 77%;
+    height: 80px;
+    background-color: #F8F9FA;
+    border-radius: 12px;
+    border:1.5px solid #DEE2E6
+}
+
+.modalPrecoImg> #inputModAddValor {
+    margin-top: 1%;
+    margin-bottom: 3%;
+    width: 77%;
+    height: 52px;
+    background-color: #F8F9FA;
+    border-radius: 12px;
+    border:1.5px solid #DEE2E6
+}
+
+.modalPrecoImg> #inputModAddUrl {
+    margin-top: 1%;
+    margin-bottom: 3%;
+    width: 77%;
+    height: 52px;
+    background-color: #F8F9FA;
+    border-radius: 12px;
+    border:1.5px solid #DEE2E6
+}
+
+#btnModSaveChangesAdd{
+    background: #FF2253;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 20px;
+    border: none;
+    box-sizing: border-box;
+    border-radius: 32px;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #F8F9FA;
+
+}
 
 /* -------- Media Query -------*/
 @media(min-width: 426px){
