--- a/src/css/style.css
+++ b/src/css/style.css
@@ -59,6 +59,7 @@ h4{
     width: 100%;
     border: 1px solid #E9ECEF;
     height: 28px;
+    padding: 8px;
 }
 .btnPesquisar{
     border: none;
@@ -173,12 +174,26 @@ h4{
     width: 386px;
       
 }
-
+.divFinalizarCompra{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.btnFinalizarCompra{
+    background-color: #FF2253;
+    color: #FFF;
+    border-radius: 5px;
+    height: 30px;
+    font: "Poppins";
+    font-weight: 700;
+    border: none;
+}
 .btnCarrinhoMobile{
+    display: flex;
     position: fixed;
     bottom: 0px;
     left: 0%;
-    width: 134vw;
+    width: 100%;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 700;
@@ -188,7 +203,8 @@ h4{
     height: 60px;
     background: #FF2253;
     border: none;
-    
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -202,6 +218,7 @@ h4{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 10px;
 }
 
 .ocultarCarrinho{
@@ -209,9 +226,13 @@ h4{
 }
 
 .headerCarrinho > h3{
-    font-size: 16px;
+    font-size:16px;
     height: 40px;
     line-height: 40px;
+}
+.imgHeaderCarrinho{
+    width: 15px;
+    height: 15px;
 }
 .carrinhoListar{
     display: flex;
@@ -254,6 +275,8 @@ h4{
     color: #868E96;
 }
 .imgCardapio{
+    max-width: 338px;
+    max-height: 224px;
     width: 100%;
     height: 100%;
     margin: 0 auto;
@@ -265,6 +288,7 @@ h4{
 .imgCarrinho{
     width: 40%;
     height: 80px;
+    max-width: 138px;
 }
 .imgLixoCarrinho{
     pointer-events: none;
@@ -297,13 +321,22 @@ h4{
     height: 40px;
     line-height: 40px;
     background-color: #F8F9FA;
+    display: flex;
+    justify-content: space-between;
+}
+.divQuantidadeCarrinho> div{
+    padding: 0px 5px 0px 5px;
 }
 .divTotalCarrinho{
     width: 100%;
     height: 40px;
     line-height: 40px;
+    display: flex;
+    justify-content: space-between;
 }
-
+.divTotalCarrinho > div{
+    padding: 0px 5px 0px 5px;
+}
 .vitrineCarrinho{
     overflow: auto;
     max-height: 60vh;
@@ -331,7 +364,7 @@ h4{
 .divOrdenarCarrinho {
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding-left: 10px;
 }
 .btnLogin{
     width: 70px;
@@ -355,12 +388,14 @@ h4{
     display: none;
 }
 
-
-
 button:hover{
     cursor: pointer;
 }
-
+.pDaFinalizacao{
+    width: 70%;
+    font-size: 52px;
+    padding: 20px 20px 20px 66px;
+}
 
 /*-------------------- Página login.html -------------------- */
 .containerFormLogin{
@@ -773,7 +808,6 @@ p{
     .vitrineCardapio-produtos-listar > span{
         margin-top: 20px;
     }
-  
     .asideCarrinho{
 
         display: block;
@@ -797,6 +831,7 @@ p{
     }
     .vitrineCarrinho-Listar{
         display: flex;
+        padding: 10px;
     }
     /*--- Login.html ---*/
     .containerFormLogin {
@@ -848,7 +883,8 @@ p{
         }
 
         .imgCarrinho{
-            width: 127px;
+            width: 100%;
+            max-width: 121px;
         }
         /*--- Login.html ---*/
         .containerFormLogin {
