--- a/src/css/style.css
+++ b/src/css/style.css
@@ -536,6 +536,7 @@ button:hover{
 /* ---------------- Página Adm ----------------*/
 
 .mainAdm{
+    width: 600px;
     display: flex;
     padding: 20px;
     margin: 0 auto;
@@ -703,6 +704,8 @@ button:hover{
     position: fixed;
     top: 52px;
     left: 25%;
+    -webkit-box-shadow: 1px 2px 21px -5px rgba(0,0,0,0.73); 
+    box-shadow: 1px 2px 21px -5px rgba(0,0,0,0.73);
 }
 .divAdm-DeletarHeader{
     display: flex;
