--- a/src/css/style.css
+++ b/src/css/style.css
@@ -743,7 +743,9 @@ button:hover{
     font-size: 14px;
     line-height: 21px;
     color: #868E96;
+    cursor: none;
 }
+
 .block-with-text{
     font-family: 'Poppins';
     font-style: normal;
@@ -901,7 +903,7 @@ button:hover{
     width: 100%;
     height: 10%;
     margin-left: 20%;
-    margin-top: 10%;
+    margin-top: 6%;
     
 }
 .modalBtnCateg>h3 {
@@ -1056,7 +1058,7 @@ button:hover{
     margin-top: 1%;
     margin-bottom: 3%;
     width: 77%;
-    height: 52px;
+    height: 45px;
     background-color: #F8F9FA;
     border-radius: 12px;
     border:1.5px solid #DEE2E6
