--- a/src/css/style.css
+++ b/src/css/style.css
@@ -535,6 +535,53 @@ button:hover{
     background-color: #FF2253;
     border-radius: 0px 0px 12px 12px;
 }
+#divsAdm{
+    display: flex;
+    align-items: baseline;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 20%;
+    margin-bottom: -40px;
+    font-size: 14px;
+    margin-left: -150px;
+    padding: 10px;
+    margin-bottom: -70px;
+}
+.divAdm-Status-Add-Header{
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+    flex-direction: row;
+    height: 30px;
+    background: #F8F9FA;
+    align-items: center;
+    padding: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.divAdm-Status-Add-Corpo-Sucesso{
+    display: flex;
+    align-items: center;
+    width: 80%;
+    height: 30px;
+    font-size: 13px;
+    padding: 5px;
+    border-bottom: 5px solid #39DF8F;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+.divAdm-Status-Add-Corpo-Erro{
+    display: flex;
+    align-items: center;
+    width: 80%;
+    height: 30px;
+    font-size: 13px;
+    padding: 5px;
+    border-bottom: 5px solid #FF2253;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
 
 /* -------------------- Página registro.html -------------------- */ 
 .containerFormCadastro {
